--- a/src/App.css
+++ b/src/App.css
@@ -607,7 +607,7 @@ template {
 
 .wrapper {
   overflow: hidden;
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-direction: column;
   min-height: 100vh;
