--- a/src/App.css
+++ b/src/App.css
@@ -606,7 +606,7 @@ template {
 }
 
 .wrapper {
-  overflow: hidden;
+  /* overflow: hidden; */
   /* position: relative; */
   display: flex;
   flex-direction: column;
